Changed HTTP status to 404 for data not found